--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta charset="utf-8" />
 
   </head>
+  Welcome my saplings to Bubble Color Changer 5000!
   <body>
-    hhgkhgjhgjhgkjhgjh
+    Did you have fun?
+    If so, play again!
     <script src="sketch.js"></script>
   </body>
 </html>
