--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
 
   </head>
-  Welcome my saplings to Bubble Color Changer 5000!
+   WeLcOmE mY sApLiNgS. tTiS iS bUBbLe ClIcK cHaNgEr 5000!😀😁😂😃😄😅😆😉😊😋😎😍😘😗😙😚 
   <body>
 
     <script src="sketch.js"></script>
