--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <meta charset="utf-8" />
 
   </head>
-   WeLcOmE mY sApLiNgS. tTiS iS bUBbLe ClIcK cHaNgEr 5000!😀😁😂😃😄😅😆😉😊😋😎😍😘😗😙😚 
-  <body>
+<h1 Welcome To Brace's Home Page.>
+    <body>
 
     <script src="sketch.js"></script>
   </body>
-      Did you have fun?
-    If so, play again!
+<h2>
 </html>
