--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
     <script src="sketch.js"></script>
   </body>
+  <li> <a href= "https://editor.p5js.org/nehemiahstevenson@students.berkeley.net/present/5uY8MHCCk">A snake game</a></li>
+
 <h2>
 </html>
