--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
     <script src="sketch.js"></script>
   </body>
-  <h2 <li> <a href= "bracesproul.github.io/ballgame.js">Fun Ball Game</a></li>
+  <h2 <li> <a href= "bracesproul.github.io/ballgame.html">Fun Ball Game</a></li>
 
 </html>
