--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
+
 <!DOCTYPE html>
 <html>
-  <body bgcolor="pink">
-  <head>
+<body bgcolor="pink">
+<head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
-  </head>
+</head>
 <h1 Welcome To Brace's Home Page.>
-    <body>
-
-    <script src="sketch.js"></script>
-  </body>
-  <h2 <li> <a href= "bracesproul.github.io/ballgame.html">Fun Ball Game</a></li>
-
+<body>
+<script src="sketch.js"></script>
+</body>
+<a href= <"ballgame.html">Fun Ball Game</a>
 </html>
