--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <body>
 <script src="sketch.js"></script>
 </body>
-<a href= <"ballgame.html">Fun Ball Game</a>
+<a href= "ballgame.html">Fun Ball Game</a>
 </html>
