--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
 <script src="sketch.js"></script>
 </body>
 <a href= ballgame.html>Fun Ball Game</a>
+<a href= wordchanger.html>Word Changer With Click</a>
+<a href= gol.html>Game Of Life</a>
 </html>
