--- a/gol.html
+++ b/gol.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,10 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
-</head>
-<body>
-<script src="ballgame.js"></script>
+    <gameoflifetext>The Game Of Life
+        </head>
+<body bgcolor="aqua">
+<script src="gol.js"></script>
 </body>
 <a href= index.html>Home</a>
 </html>
