--- a/wordchanger.html
+++ b/wordchanger.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
@@ -9,8 +9,8 @@
     <meta charset="utf-8" />
 
 </head>
-<body>
-<script src="ballgame.js"></script>
+<body bgcolor="#ff1493">
+<script src="wordchanger.js"></script>
 </body>
 <a href= index.html>Home</a>
 </html>
