--- a/stars.html
+++ b/stars.html
@@ -1,7 +1,6 @@
-
 <!DOCTYPE html>
 <html>
-<body bgcolor="pink">
+
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
@@ -10,9 +9,10 @@
     <meta charset="utf-8" />
 
 </head>
-<h1 Welcome To Brace's Home Page.>
+
 <body>
-<script src="sketch.js"></script>
+<script src="starz.js"></script>
+<script src="stars.js"></script>
 </body>
 <a href= index.html>Home</a>
 <a href= ballgame.html>Fun Ball Game</a>
