--- a/wordchanger.html
+++ b/wordchanger.html
@@ -13,4 +13,8 @@
 <script src="wordchanger.js"></script>
 </body>
 <a href= index.html>Home</a>
+<a href= ballgame.html>Fun Ball Game</a>
+<a href= wordchanger.html>Word Changer With Click</a>
+<a href= gol.html>Game Of Life</a>
+<a href= stars.html>Space Travel</a>
 </html>
