--- a/stars.html
+++ b/stars.html
@@ -1,6 +1,6 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
@@ -8,15 +8,47 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
-</head>
 
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #111;
+        }
+    </style>
+</head>
 <body>
 <script src="starz.js"></script>
 <script src="stars.js"></script>
+
+
+<ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="ballgame.html">Fun Ball Game</a></li>
+    <li><a href="wordchanger.html">Word Changer With Click</a></li>
+    <li><a href="gol.html">Game Of Life</a></li>
+    <li><a href="stars.html">Space Travel</a></li>
+
+</ul>
+
+
 </body>
-<a href= index.html>Home</a>
-<a href= ballgame.html>Fun Ball Game</a>
-<a href= wordchanger.html>Word Changer With Click</a>
-<a href= gol.html>Game Of Life</a>
-<a href= stars.html>Space Travel</a>
 </html>
