--- a/wordchanger.html
+++ b/wordchanger.html
@@ -47,8 +47,12 @@
     <li><a href="wordchanger.html">Word Changer With Click</a></li>
     <li><a href="gol.html">Game Of Life</a></li>
     <li><a href="stars.html">Space Travel</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
 </ul>
+
 
 
 </body>
