--- a/gol.html
+++ b/gol.html
@@ -7,7 +7,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <gameoflifetext>The Game Of Life
 
         <style>
         ul {
@@ -46,8 +45,12 @@
     <li><a href="wordchanger.html">Word Changer With Click</a></li>
     <li><a href="gol.html">Game Of Life</a></li>
     <li><a href="stars.html">Space Travel</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
 </ul>
+
 
 
 </body>
