--- a/stars.html
+++ b/stars.html
@@ -39,15 +39,18 @@
 <script src="starz.js"></script>
 <script src="stars.js"></script>
 
-
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="ballgame.html">Fun Ball Game</a></li>
     <li><a href="wordchanger.html">Word Changer With Click</a></li>
     <li><a href="gol.html">Game Of Life</a></li>
     <li><a href="stars.html">Space Travel</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
 </ul>
+
 
 
 </body>
