--- a/about.html
+++ b/about.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #111;
+        }
+    </style>
 </head>
-<body>
-School Email: bracesproul@students.berkeley.net
+<body bgcolor="#ffd700">
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="ballgame.html">Fun Ball Game</a></li>
@@ -17,6 +42,7 @@ School Email: bracesproul@students.berkeley.net
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
 </ul>
-
+<b>Welcome to the About page!
+This website was created for my final in Intro To Computer Programing course at Berkeley High. Please view the other pages and have fun!</b>
 </body>
 </html>
