--- a/highlights.html
+++ b/highlights.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #111;
+        }
+    </style>
 </head>
-<body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Yts8EhBjxsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<body bgcolor="#f0e68c">
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="ballgame.html">Fun Ball Game</a></li>
@@ -17,6 +42,7 @@
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yts8EhBjxsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
