--- a/stars.html
+++ b/stars.html
@@ -42,13 +42,13 @@
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="ballgame.html">Fun Ball Game</a></li>
-    <li><a href="wordchanger.html">Word Changer With Click</a></li>
+    <li><a href="wordchanger.html">Ball Drag</a></li>
     <li><a href="gol.html">Game Of Life</a></li>
     <li><a href="stars.html">Space Travel</a></li>
+    <li><a href="popcorn.html">Popcorn</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
-
 </ul>
 
 
