--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div class="dropdown-content">
         <a href="gol.html">Game Of Life</a>
         <a href="ballgame.html">Fun Ball Game</a>
-        <a href="wordchanger.html">Words</a>
+        <a href="wordchanger.html">Ball Drag</a>
+        <a href="popcorn.html">Popcorn</a>
+
 
         <div class="dropdown">
             <button class="dropbtn">Home</button>
