--- a/popcorn.html
+++ b/popcorn.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
-        <style>
+    <style>
         ul {
             list-style-type: none;
             margin: 0;
@@ -35,9 +34,7 @@
     </style>
 </head>
 <body>
-<body bgcolor="aqua">
-<script src="gol.js"></script>
-
+<script src="popcorn.js"></script>
 
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
@@ -49,6 +46,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
+
 
 </ul>
 
