--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     <style>
-
     </style>
 </head>
 <body bgcolor="black"
@@ -23,6 +22,7 @@
     <div class="dropdown-content">
         <a href="gol.html">Game Of Life</a>
         <a href="ballgame.html">Fun Ball Game</a>
+        <a href="snakegame.html">Snake Game</a>
         <a href="wordchanger.html">Ball Drag</a>
         <a href="popcorn.html">Popcorn</a>
 
