--- a/snakegame.html
+++ b/snakegame.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
     <style>
         ul {
@@ -29,8 +33,13 @@
             background-color: #111;
         }
     </style>
+
 </head>
-<body bgcolor="#ffd700">
+
+<body>
+<script src="ssnakegame.js"></script>
+<script src="snakegame.js"></script>
+
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="ballgame.html">Fun Ball Game</a></li>
@@ -43,8 +52,8 @@
     <li><a href="about.html">About</a></li>
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
 
+
 </ul>
-<b>Welcome to the About page!
-This website was created for my final in Intro To Computer Programing course at Berkeley High. Please view the other pages and have fun!</b>
 </body>
+
 </html>
