--- a/wordchanger.html
+++ b/wordchanger.html
@@ -47,6 +47,7 @@
     <li><a href="gol.html">Game Of Life</a></li>
     <li><a href="stars.html">Space Travel</a></li>
     <li><a href="popcorn.html">Popcorn</a></li>
+    <li><a href="snakegame.html">Snake Game</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="highlights.html">Hightlighs(work in progress)</a></li>
