--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="snakegame.html">Snake Game</a>
         <a href="wordchanger.html">Ball Drag</a>
         <a href="popcorn.html">Popcorn</a>
+        <a href="snakegame.html">SnakeGame</a>
 
 
         <div class="dropdown">
